Fix sticky header on narrow displays

--- a/style.css
+++ b/style.css
@@ -96,7 +96,10 @@ header {
 	background-color: var(--blue);
 	padding: 16px;
 }
-@media (min-height: 640px) {
+@media
+	(max-width: 960px) and (min-height: 960px),
+	(min-width: 961px) and (min-height: 640px)
+{
 	header {
 		position: sticky;
 		top: 0px;
